kubernetes/namespaces/default/calibre-web/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: calibre-web
spec:
  selector:
    matchLabels:
      app: calibre-web
  template:
    metadata:
      labels:
        app: calibre-web
    spec:
      containers:
        - image: lscr.io/linuxserver/calibre-web:0.6.21
          imagePullPolicy: IfNotPresent
          name: calibre-web
          ports:
            - name: http
              containerPort: 8083
          volumeMounts:
            - name: calibre-web-storage
              mountPath: /books
            - name: calibre-web-config
              mountPath: /config
      volumes:
        - name: calibre-web-storage
          persistentVolumeClaim:
            claimName: calibre-web-storage
        - name: calibre-web-config
          persistentVolumeClaim:
            claimName: calibre-web-config
