kubernetes/namespaces/default/calibre-web/service.yml
apiVersion: v1
kind: Service
metadata:
  name: calibre-web
spec:
  selector:
    app: calibre-web
  ports:
    - name: http
      targetPort: http
      port: 80
