kubernetes/namespaces/default/calibre-web/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: books
  annotations:
    # Most books exceed the default limit (1M)
    nginx.ingress.kubernetes.io/proxy-body-size: "1000M"
spec:
  ingressClassName: nginx
  rules:
    - host: books.hyperserver.dev
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: calibre-web
                port:
                  number: 80
